--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,78 @@
-langchain==0.0.154
-PyPDF2==3.0.1
-python-dotenv==1.0.0
-streamlit==1.18.1
-faiss-cpu==1.7.4
-altair<5
+absl-py==1.4.0
+astunparse==1.6.3
+async-generator==1.10
+attrs==21.4.0
+brotlipy==0.7.0
+cachetools==5.3.1
+certifi==2021.10.8
+cffi @ file:///Users/runner/miniforge3/conda-bld/cffi_1631636293358/work
+chardet @ file:///Users/runner/miniforge3/conda-bld/chardet_1610093454858/work
+charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1626371162869/work
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1602866480661/work
+conda==4.11.0
+conda-package-handling @ file:///Users/runner/miniforge3/conda-bld/conda-package-handling_1618231726924/work
+cryptography @ file:///Users/runner/miniforge3/conda-bld/cryptography_1633983374178/work
+distlib==0.3.7
+filelock==3.12.2
+flatbuffers==23.5.26
+gast==0.4.0
+google-auth==2.22.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.56.2
+h11==0.13.0
+h5py==3.9.0
+idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1609836280497/work
+importlib-metadata==6.8.0
+iniconfig==1.1.1
+joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1633637554808/work
+keras==2.13.1
+libclang==16.0.6
+Markdown==3.4.3
+MarkupSafe==2.1.3
+numpy==1.24.3
+oauthlib==3.2.2
+opt-einsum==3.3.0
+outcome==1.2.0
+packaging==21.3
+platformdirs==3.9.1
+pluggy==1.0.0
+protobuf==4.23.4
+py==1.11.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycosat @ file:///Users/runner/miniforge3/conda-bld/pycosat_1624996792650/work
+pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1593275161868/work
+pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1633192417276/work
+pyparsing==3.0.9
+PySocks @ file:///Users/runner/miniforge3/conda-bld/pysocks_1610291460269/work
+pytest==7.1.2
+python-magic==0.4.27
+requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1626393743643/work
+requests-oauthlib==1.3.1
+rsa==4.9
+ruamel-yaml-conda @ file:///Users/runner/miniforge3/conda-bld/ruamel_yaml_1624999868738/work
+scikit-learn @ file:///Users/runner/miniforge3/conda-bld/scikit-learn_1636784144606/work
+scipy @ file:///Users/runner/miniforge3/conda-bld/scipy_1637806880936/work
+selenium==4.3.0
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+sniffio==1.2.0
+sortedcontainers==2.4.0
+tensorboard==2.13.0
+tensorboard-data-server==0.7.1
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-macos==2.13.0
+termcolor==2.3.0
+threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1633102299089/work
+tomli==2.0.1
+tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1632160078689/work
+trio==0.21.0
+trio-websocket==0.9.2
+typing_extensions==4.5.0
+urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1632350318291/work
+virtualenv==20.24.0
+Werkzeug==2.3.6
+wrapt==1.15.0
+wsproto==1.1.0
+zipp==3.16.2
